# public

./: README.md
ThreeCode/NumIn/app/: local.properties
android/strace-5.15-arm&arm64/: read.txt
android/strace-5.15-arm&arm64/exe/: strace32  strace64
clearData/: settings.gradle
clearData/app/: build.gradle
clearData/app/src/main/: AndroidManifest.xml
clearData/app/src/main/res/layout/: activity_main.xml
clearData/app/src/main/res/values/: strings.xml
clearData/gradle/wrapper/: gradle-wrapper.properties
colorpicker/colorpicker/: build.gradle  proguard-rules.pro
colorpicker/colorpicker/src/main/: AndroidManifest.xml
colorpicker/colorpicker/src/main/res/layout/: top_defaults_view_color_picker_popup.xml
colorpicker/colorpicker/src/main/res/values-land-1080x768/: lay_y.xml
colorpicker/colorpicker/src/main/res/values-land-1280x672/: lay_x.xml
colorpicker/colorpicker/src/main/res/values-land-1280x752/: lay_y.xml
colorpicker/colorpicker/src/main/res/values-land-1600x900/: lay_y.xml
colorpicker/colorpicker/src/main/res/values-land-1920x960/: lay_y.xml
colorpicker/colorpicker/src/main/res/values-land-2048x1536/: lay_x.xml  lay_y.xml
colorpicker/colorpicker/src/main/res/values-land-2160x1910/: lay_y.xml
colorpicker/colorpicker/src/main/res/values-land-2388x1668/: lay_x.xml  lay_y.xml
colorpicker/colorpicker/src/main/res/values-land-2560x1800/: lay_y.xml
colorpicker/colorpicker/src/main/res/values-land-2880x1440/: lay_x.xml
colorpicker/colorpicker/src/main/res/values-land-2960x1440/: lay_y.xml
colorpicker/colorpicker/src/main/res/values-land-3840x2160/: lay_x.xml
normDemo/: build.gradle  gradle.properties  settings.gradle
normDemo/app/: build.gradle
normDemo/app/src/main/: AndroidManifest.xml
normDemo/app/src/main/res/anim/: push_bottom_in.xml  (+2 more)
office/: com.mphotool.main.lic
serialPort/: settings.gradle
serialPort/app/: build.gradle
serialPort/app/src/main/: AndroidManifest.xml
serialPort/app/src/main/jni/: CMakeLists.txt  SerialPort.c  SerialPort.h  gen_SerialPort_h.sh
tpDEMO/: gradle.properties  proguard-rules.pro
tpDEMO - 副本/: build.gradle
tpDEMO - 副本/app/libs/: android-pdfview-release.aar
tpDEMO - 副本/tpsdk/: CMakeLists.txt  proguard-rules.pro
tpDEMO - 副本/tpsdk/src/main/: AndroidManifest.xml
tpDEMO - 副本/tpsdk/src/main/cpp/decoder/: Ffmpeg_decoder.cpp  Ffmpeg_decoder_gl.cpp  Hw_decoder.cpp  Media_decoder.h
tpDEMO - 副本/tpsdk/src/main/java/com/igrs/audio/: OpusPlayer.java  OpusRecorder.java
tpDEMO - 副本/tpsdk/src/main/java/com/igrs/audio/filedemo/: DecodeOpusPresenter.java  OpusRecorderTask.java
tpDEMO - 副本/tpsdk/src/main/java/com/igrs/sml/: AudioManage.java  CMD.java  PlayerView.java  PlayerView_texture.java  TaskModel.java
tpDEMO - 副本/tpsdk/src/main/java/com/igrs/sml/callback/: IEventListener.java
tpDEMO - 副本/tpsdk/src/main/java/com/igrs/sml/event/: SystemEvent.java  TouchEventCallback.java
tpDEMO - 副本/tpsdk/src/main/java/com/igrs/sml/tcp/: NettyClient.java  SendRunable.java
tpDEMO - 副本/tpsdk/src/main/java/com/igrs/sml/util/: ANRException.java  CameraUtil.java  DateUtil.java  FileUtils.java  L.java  SurfaceControl.java  TouchUtil.java
tpDEMO - 副本/tpsdk/src/main/java/com/igrs/tpsdk/: ProjectionSDK.java
tpDEMO - 副本/tpsdk/src/main/java/com/igrs/tpsdk/opengl/: VideoEncoder.java
tpDEMO - 副本/tpsdk/src/main/java/com/igrs/tpsdk/opengl/filter/: Beauty.java  BlurFilter.java  NoFilter.java  TextureFilter.java
tpDEMO - 副本/tpsdk/src/main/java/com/igrs/tpsdk/opengl/util/: EasyGlUtils.java  EglCore.java  FboFrame.java  GlesUtil.java  MatrixUtils.java
tpDEMO - 副本/tpsdk/src/main/java/com/igrs/tpsdk/service/: EncoderH264CallBack.java  ScrcpyService.java  ScreenRecordService_scrcpy.java  ScreenRecordService_sys.java
tpDEMO - 副本/tpsdk/src/main/res/layout/: float_image.xml
tpDEMO/app/: build.gradle
tpDEMO/app/libs/: transferlib-1.0.1.aar
tpDEMO/app/src/main/: AndroidManifest.xml
tpDEMO/tpsdk/: build.gradle
tpDEMO/tpsdk/src/main/cpp/decoder/: CMakeLists.txt  Ffmpeg_decoder.h  Hw_decoder.h
tpDEMO/tpsdk/src/main/cpp/opus/: CMakeLists.txt
tpSoftDemo/: settings.gradle
tpSoftDemo/app/: build.gradle
tpSoftDemo/app/src/main/: AndroidManifest.xml
tpSoftDemo/tpsdk/src/main/cpp/: base.h
技术栈/: android Chrome.txt  kotlin-单例.txt  studio.txt
(+562 files in other folders)
